fix alignment of the close button on the top of the sidenav
just make the whole thing a button and remove the icon

--- a/app/styles/admin.css
+++ b/app/styles/admin.css
@@ -16,3 +16,7 @@
 .sub-list-open {
     transform: rotate(90deg);
 }
+
+a[role="button"] {
+    cursor: pointer;
+}
